# internal/interfaces/api/router.go
@@ -77,6 +77,8 @@ func NewRouter(userHandler *handler.UserHandler, cityHandler *handler.CityHandle
 		{
 			entrepreneurs.POST("", entrepreneurHandler.Create)
 			entrepreneurs.GET("", entrepreneurHandler.GetAll)
+			entrepreneurs.GET("/sqb-failed", entrepreneurHandler.GetSqbFailed)
+			entrepreneurs.POST("/sqb-retry", entrepreneurHandler.RetrySqbFailed)
 			entrepreneurs.GET("/:id", entrepreneurHandler.GetByID)
 			entrepreneurs.PUT("/:id", entrepreneurHandler.Update)
 			entrepreneurs.DELETE("/:id", entrepreneurHandler.Delete)
